--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ button:hover {
 
 .photo-date {
     font-size: 12px;
-    color: gold;
+    color: white;
     text-align: center;
     margin-bottom: 5px;
 }
@@ -131,4 +131,23 @@ button:hover {
     border-radius: 5px;
     margin-top: 5px;
     cursor: pointer;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.modal-img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 5px;
 }
