--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ body {
   margin-top: 8px;
   border-radius: 6px;
   box-shadow: inset 0 0 6px 1px #f0d68c33;
-  font-family: 'Treasure Map Deadhand', cursive, Arial, sans-serif;
+  font-family: 'Cabin', Arial, sans-serif;
   font-size: 1rem;
   color: #f0d68cdd;
 }
